--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "parcel ./src/index.html ./src/html/registerAcc.html ./src/html/feed.html ",
-    "build": "parcel build ./src/index.html ./src/html/registerAcc.html ./src/html/feed.html  --dist-dir docs --public-url / FE22-js2-slutprojekt-martin-bungner/",
+    "build": "parcel build ./src/index.html ./src/html/registerAcc.html ./src/html/feed.html  --dist-dir docs --public-url /FE22-js2-slutprojekt-martin-bungner/",
     "clean": "del-cli ./.parcel-cache ./docs ./dist"
   },
   "keywords": [],
